--- a/environment.yml
+++ b/environment.yml
@@ -1,76 +1,64 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-
-name: mental2
-
+name: mental2env
 channels:
-  - conda-forge/label/cf201901
-  - defaults
   - conda-forge
-
+  - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1
-  - blas=1.0
-  - ca-certificates=2021.1.19
-  - certifi=2020.12.5
-  - cycler=0.10.0
-  - dbus=1.13.18
-  - expat=2.2.10
-  - fontconfig=2.13.1
-  - freetype=2.10.4
-  - glib=2.67.4
-  - gst-plugins-base
-  - gstreamer=1.14.0
-  - icu=58.2
-  - intel-openmp=2020.2
-  - jpeg=9b
-  - kiwisolver=1.3.1
-  - lcms2=2.11
-  - ld_impl_linux-64=2.33.1
-  - libedit=3.1.20191231
-  - libffi=3.3
-  - libgcc-ng=9.1.0
-  - libgfortran-ng=7.3.0
-  - libpng=1.6.37
-  - libstdcxx-ng=9.1.0
-  - libtiff=4.1.0
-  - libuuid=1.0.3
-  - libxcb=1.14
-  - libxml2=2.9.10
-  - lz4-c=1.9.3
-  - matplotlib=3.3.4
-  - matplotlib-base=3.3.4
-  - mkl=2020.2
-  - mkl-service=2.3.0
-  - mkl_fft=1.2.1
-  - mkl_random=1.1.1
-  - ncurses=6.2
-  - numpy=1.19.2
-  - numpy-base=1.19.2
-  - olefile=0.46
-  - openssl=1.1.1j
-  - pandas=1.2.2
-  - pcre=8.44
-  - pickle5=0.0.11
-  - pillow=8.1.0
-  - pip=21.0.1
-  - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - python=3.8.5
-  - python-dateutil=2.8.1
-  - pytz=2021.1
-  - qt=5.9.7
-  - readline=8.1
-  - scipy=1.6.0
-  - seaborn=0.11.1
-  - setuptools=52.0.0
-  - sip=4.19.13
-  - six=1.15.0
-  - sqlite=3.33.0
-  - tk=8.6.10
-  - tornado=6.1
-  - wheel=0.36.2
-  - xz=5.2.5
-  - zlib=1.2.11
-  - zstd=1.4.5
+  - blas=1.0=openblas
+  - ca-certificates=2025.2.25=hca03da5_0
+  - certifi=2024.8.30=py38hca03da5_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - expat=2.7.1=h313beb8_0
+  - fontconfig=2.14.1=h6402c1e_3
+  - freetype=2.13.3=h47d26ad_0
+  - icu=73.1=h313beb8_0
+  - jpeg=9e=h80987f9_3
+  - kiwisolver=1.4.4=py38h313beb8_0
+  - lcms2=2.12=hba8e193_0
+  - libblas=3.9.0=20_osxarm64_openblas
+  - libcblas=3.9.0=20_osxarm64_openblas
+  - libcxx=14.0.6=h848a8c0_0
+  - libffi=3.4.4=hca03da5_1
+  - libgfortran=5.0.0=14_2_0_h6c33f7e_103
+  - libgfortran5=14.2.0=h6c33f7e_103
+  - libiconv=1.16=h80987f9_3
+  - liblapack=3.9.0=20_osxarm64_openblas
+  - libopenblas=0.3.25=openmp_h6c19121_0
+  - libpng=1.6.39=h80987f9_0
+  - libtiff=4.2.0=had003b8_2
+  - libwebp-base=1.3.2=h80987f9_1
+  - libxml2=2.13.8=h0b34f26_0
+  - llvm-openmp=20.1.6=hdb05f8b_0
+  - lz4-c=1.9.4=h313beb8_1
+  - matplotlib=3.3.4=py38h150bfb4_0
+  - matplotlib-base=3.3.4=py38ha029820_0
+  - ncurses=6.4=h313beb8_0
+  - numpy=1.19.5=py38h831b0dc_4
+  - numpy-base=1.19.5=py38hdc56644_4
+  - olefile=0.46=pyhd3eb1b0_0
+  - openjpeg=2.4.0=h0ed58ac_2
+  - openssl=3.0.16=h02f6b3c_0
+  - pandas=1.2.5=py38h3777fb4_0
+  - pillow=8.1.2=py38h5351710_1
+  - pip=21.2.4=py38hca03da5_0
+  - pyparsing=2.4.7=pyhd3eb1b0_0
+  - python=3.8.20=hb885b13_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.8=2_cp38
+  - pytz=2021.1=pyhd3eb1b0_0
+  - readline=8.2=h1a28f6b_0
+  - scipy=1.6.3=py38hd0c9ec0_0
+  - seaborn=0.11.2=pyhd3eb1b0_0
+  - setuptools=52.0.0=py38hca03da5_1
+  - six=1.15.0=pyhd3eb1b0_0
+  - sqlite=3.45.3=h80987f9_0
+  - tk=8.6.14=h6ba3021_1
+  - tornado=6.1=py38h1a28f6b_0
+  - wheel=0.44.0=py38hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - zlib=1.2.13=h18a0788_1
+  - zstd=1.5.6=hfb09047_0
+  - pip:
+      - pickle5==0.0.11
+prefix: /Users/owenflynn/anaconda3/envs/mental2env
