--- a/environment.yml
+++ b/environment.yml
@@ -1,64 +1,28 @@
 name: mental2env
 channels:
-  - conda-forge
-  - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - blas=1.0=openblas
-  - ca-certificates=2025.2.25=hca03da5_0
-  - certifi=2024.8.30=py38hca03da5_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - expat=2.7.1=h313beb8_0
-  - fontconfig=2.14.1=h6402c1e_3
-  - freetype=2.13.3=h47d26ad_0
-  - icu=73.1=h313beb8_0
-  - jpeg=9e=h80987f9_3
-  - kiwisolver=1.4.4=py38h313beb8_0
-  - lcms2=2.12=hba8e193_0
-  - libblas=3.9.0=20_osxarm64_openblas
-  - libcblas=3.9.0=20_osxarm64_openblas
-  - libcxx=14.0.6=h848a8c0_0
-  - libffi=3.4.4=hca03da5_1
-  - libgfortran=5.0.0=14_2_0_h6c33f7e_103
-  - libgfortran5=14.2.0=h6c33f7e_103
-  - libiconv=1.16=h80987f9_3
-  - liblapack=3.9.0=20_osxarm64_openblas
-  - libopenblas=0.3.25=openmp_h6c19121_0
-  - libpng=1.6.39=h80987f9_0
-  - libtiff=4.2.0=had003b8_2
-  - libwebp-base=1.3.2=h80987f9_1
-  - libxml2=2.13.8=h0b34f26_0
-  - llvm-openmp=20.1.6=hdb05f8b_0
-  - lz4-c=1.9.4=h313beb8_1
-  - matplotlib=3.3.4=py38h150bfb4_0
-  - matplotlib-base=3.3.4=py38ha029820_0
-  - ncurses=6.4=h313beb8_0
-  - numpy=1.19.5=py38h831b0dc_4
-  - numpy-base=1.19.5=py38hdc56644_4
-  - olefile=0.46=pyhd3eb1b0_0
-  - openjpeg=2.4.0=h0ed58ac_2
-  - openssl=3.0.16=h02f6b3c_0
-  - pandas=1.2.5=py38h3777fb4_0
-  - pillow=8.1.2=py38h5351710_1
-  - pip=21.2.4=py38hca03da5_0
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - python=3.8.20=hb885b13_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python_abi=3.8=2_cp38
-  - pytz=2021.1=pyhd3eb1b0_0
-  - readline=8.2=h1a28f6b_0
-  - scipy=1.6.3=py38hd0c9ec0_0
-  - seaborn=0.11.2=pyhd3eb1b0_0
-  - setuptools=52.0.0=py38hca03da5_1
-  - six=1.15.0=pyhd3eb1b0_0
-  - sqlite=3.45.3=h80987f9_0
-  - tk=8.6.14=h6ba3021_1
-  - tornado=6.1=py38h1a28f6b_0
-  - wheel=0.44.0=py38hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - zlib=1.2.13=h18a0788_1
-  - zstd=1.5.6=hfb09047_0
-  - pip:
-      - pickle5==0.0.11
+  - cycler
+  - fontconfig
+  - freetype
+  - libffi
+  - libpng
+  - lz4-c
+  - matplotlib=3.3
+  - numpy=1.19
+  - openssl
+  - pandas=1.2
+  - pillow=8.1
+  - pip=21
+  - pyparsing=2.4
+  - python-dateutil=2.8
+  - python=3.8
+  - pytz=2021.1
+  - scipy=1.6
+  - seaborn=0.11
+  - setuptools=52
+  - six=1.15
+  - tornado=6.1
+  - wheel
 prefix: /Users/owenflynn/anaconda3/envs/mental2env
